integration_tests/codegen_fail/fail/interface/wrong_item_enum.stderr
error: GraphQL interface can only be derived on structs
 --> fail/interface/wrong_item_enum.rs:9:1
  |
9 | enum Character {}
  | ^^^^^^^^^^^^^^^^^
